# backend/routes/cajero.routes.js
@@ -1,9 +1,0 @@
-const express = require('express');
-const CajeroController = require('../controller/cajero.controller');
-
-const router = express.Router();
-
-router.get('/todos', CajeroController.obtenerTodos);
-router.get('/porId/:id', CajeroController.obtenerPorId);
-
-module.exports = router;
